<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/icon_category"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/icon_list"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/icon_cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/icon_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/icon_setting"
            android:title="@string/menu_setting" />
    </group>
</menu>